// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardSingleSetting renders correctly with different children 1`] = `
<div
  class="border-grey100-mode1 rounded-[10px] border p-[17px_20px]"
>
  <div
    class="border-white-mode1 border-b pb-[15px]"
  >
    <span
      class="text-white-mode1 font-inter text-base font-bold"
    >
      Another Title
    </span>
  </div>
  <div
    class="pt-[15px]"
  >
    <div>
      <span>
        Nested Content
      </span>
    </div>
  </div>
</div>
`;

exports[`CardSingleSetting renders correctly with title and children 1`] = `
<div
  class="border-grey100-mode1 rounded-[10px] border p-[17px_20px]"
>
  <div
    class="border-white-mode1 border-b pb-[15px]"
  >
    <span
      class="text-white-mode1 font-inter text-base font-bold"
    >
      Test Title
    </span>
  </div>
  <div
    class="pt-[15px]"
  >
    <p>
      Test Content
    </p>
  </div>
</div>
`;
